---
source: tui/src/chatwidget/tests.rs
<<<<<<< HEAD
expression: terminal.backend()
---
"                                                                                "
"The model wants to apply changes                                                "
"                                                                                "
"This will grant write access to /tmp for the remainder of this session.         "
"                                                                                "
"▌Apply changes?                                                                 "
"▌ Yes   No, provide feedback                                                    "
"▌ Approve and apply the changes                                                 "
"                                                                                "
=======
expression: terminal.backend().vt100().screen().contents()
---
  Would you like to make the following edits?

  README.md (+2 -0)

      1     +hello
      2     +world

  The model wants to apply changes

› 1. Yes, proceed
  2. No, and tell Codex what to do differently esc

  Press enter to confirm or esc to cancel
>>>>>>> upstream/main
